# rhex_edu

./: .gitignore  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
guidelines/: ROS2_notes.md
rhex_ws/: kbi.py
rhex_ws/.devcontainer/: devcontainer.json
rhex_ws/runs/detect/train/: args.yaml
rhex_ws/src/controls/: Android_GUI_Progress_Documentation.md  README.md  connect  connect.cc  control_server.cc  disconnect  disconnect.cc  sit  sit.cc  stand  stand.cc
rhex_ws/src/flask_server/: app.py  server.py
rhex_ws/src/gui_controls/: Android_GUI_Progress_Documentation.md  CMakeLists.txt  README.md  control_client  control_client.cc  server.py  setup.py
rhex_ws/src/gui_controls/include/: CMakeCache.txt  Makefile  RHexAPI.h  cmake_install.cmake
rhex_ws/src/gui_controls/src/: pyrhexapi.cpp  server.py
rhex_ws/src/rhex_bringup/: CMakeLists.txt  package.xml
rhex_ws/src/rhex_bringup/launch/: bringup_simulation_gui.launch.py
rhex_ws/src/rhex_control/: CMakeLists.txt  README.md  package.xml
rhex_ws/src/rhex_control/launch/: simple_start_controller_server.launch.py  start_controller_server.launch.py  testing_robot.launch.py
rhex_ws/src/rhex_control/scripts/: buttons.py  cmd_publisher_exec.py  controller_server_network.py  optimizer_commands.py  optimizer_node.py  simple_controller_server_network.py  simple_sitter.py  simple_stander.py  simple_walker.py  test_robot.py
rhex_ws/src/rhex_control/scripts/plots_and_data/: saved_data.mat
rhex_ws/src/rhex_description/: CMakeLists.txt
rhex_ws/src/rhex_description/meshes/: rpk10_leg.dae  upper_case.dae
rhex_ws/src/rhex_description/urdf/: accessories.xacro  legs.xacro  robot.urdf.xacro  robot_gazebo.xacro
rhex_ws/src/rhex_gazebo/: CMakeLists.txt  package.xml
rhex_ws/src/rhex_gazebo/launch/: simple_start_sim.launch.py
rhex_ws/src/rhex_gazebo/worlds/: empty.world  parkour.world
rhex_ws/src/rhex_yolo_detector/: README.md  YOLO_Detection_Progress.md  package.xml  setup.cfg  setup.py
rhex_ws/src/rhex_yolo_detector/rhex_yolo_detector/: yolo_subscriber.py
scripts/: build_workspace.sh  mv_robot_controller.sh  robot_controller.sh  start_fltk_gui.sh  start_rhex_supervisor.sh
src/rhex_control/: CMakeLists.txt
src/rhex_control/scripts/: miscellaneous.py  simple_walker.py
src/rhex_description/: CMakeLists.txt  package.xml
src/rhex_description/config/: ros_control.yaml
src/rhex_description/meshes/: rpk10_chassis.dae
src/rhex_description/urdf/: accessories.xacro  miscellaneous.xacro  robot.urdf.xacro  robot_gazebo.xacro
src/rhex_gazebo/: CMakeLists.txt
src/rhex_gazebo/launch/: simple_start_sim.launch.py  start_sim.launch.py
src/rhex_gazebo/worlds/: empty.world
src/rhex_msgs/: package.xml
