<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
	<name>rhex_control</name>
	<version>0.0.1</version>
	<description>TODO: Package description</description>

	<url type="repository">TODO: Write the repo link</url>
	<maintainer email="yavuzselimozkaya+gitlab@gmail.com">yavuzselimozkaya</maintainer>
	<author email="yavuzselimozkaya+gitlab@gmail.com">yavuzselimozkaya</author>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
